test-helm/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
spec:
  selector: 
    app: demo-api-svc
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9998
      targetPort: 8977
