test-helm/templates/api-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: demo-api-svc
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/doc-repo-svc-api: "true"
  podSelector:
    matchLabels:
      io.kompose.network/doc-repo-svc-api: "true"
